Fix overflow form

--- a/style.css
+++ b/style.css
@@ -8,8 +8,11 @@ html, body {
     background: url(bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: lightsalmon;
+    background-color: white; /* lightsalmon;*/
     font-family: sans-serif; 
+    position: relative;
+    overflow: auto;
+    
 } 
 .loginBox {
     position: absolute;
@@ -23,6 +26,7 @@ html, body {
     /*font-size: 20px;*/
     background: rgba(0, 0, 0, 0.6);
     color: whitesmoke;
+
 } 
 .user {
     width: 150px;
@@ -68,6 +72,7 @@ h2 {
 @media (max-width: 576px) {
     .bg {background-position: 50%}
 }
+
 .loginBox input[type="submit"] {
     border: none;
     outline: none;
